fix: manage text-detail header should scroll out of view

--- a/src/app/manage/text-detail/basic-text-view/basic-text-view.component.scss
+++ b/src/app/manage/text-detail/basic-text-view/basic-text-view.component.scss
@@ -1,5 +1,6 @@
 div {
     padding-top: 5px;
+    padding-left: 20px;
 
     p:first-child {
         margin-top: 5px;
